fix jnlp for good. this is ready for production now

--- a/languagetool-webstart/pom.xml
+++ b/languagetool-webstart/pom.xml
@@ -20,7 +20,7 @@
   <build>
     <resources>
       <resource>
-        <directory>src/</directory>        
+        <directory>src/jnlp/resources</directory>        
       </resource>
       <resource>
         <directory>${basedir}</directory>
@@ -58,8 +58,8 @@
           <excludeTransitive>false</excludeTransitive>
           <jnlp>
             <!-- we play with the resource path and template relative path to test MOJO-391 -->
-            <inputTemplateResourcePath>${project.basedir}/src/</inputTemplateResourcePath>
-            <inputTemplate>jnlp/template_standalone.vm</inputTemplate>
+            <inputTemplateResourcePath>${project.basedir}/src/main/jnlp</inputTemplateResourcePath>
+            <inputTemplate>template_standalone.vm</inputTemplate>
             <outputFile>LanguageTool.jnlp</outputFile>
             <mainClass>org.languagetool.gui.Main</mainClass>
           </jnlp>
