--- a/pom.xml
+++ b/pom.xml
@@ -1243,6 +1243,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
+                        <reuseForks>false</reuseForks>
                         <trimStackTrace>false</trimStackTrace>
                         <argLine>-Xms256m -Xmx3072m</argLine>
                         <!--<runOrder>failedfirst</runOrder>-->
