--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,7 @@
         <!-- see https://github.com/languagetool-org/languagetool/issues/4088 before you upgrade this -->
         <spanish-pos-dict.version>2.0</spanish-pos-dict.version>
         <portuguese-pos-dict.version>0.3</portuguese-pos-dict.version>
+        <dutch-pos-dict.version>0.1</dutch-pos-dict.version>
         <tech.units.indriya.version>1.3</tech.units.indriya.version>
         <ecs-logging-java.version>1.3.2</ecs-logging-java.version>
 
@@ -934,6 +935,21 @@
                 <groupId>org.languagetool</groupId>
                 <artifactId>portuguese-pos-dict</artifactId>
                 <version>${portuguese-pos-dict.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.carrot2</groupId>
+                        <artifactId>morfologik-fsa</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.carrot2</groupId>
+                        <artifactId>morfologik-stemming</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.languagetool</groupId>
+                <artifactId>dutch-pos-dict</artifactId>
+                <version>${dutch-pos-dict.version}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.carrot2</groupId>
