fix(?) name to see if that helps with the CI failure "Could not find artifact de.danielnaber:jwordsplitter:jar:4.6-SNAPSHOT"

--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
     <distributionManagement>
         <repository>
             <id>repo.languagetool.org</id>
-            <name>languagetool-os-snapshot</name>
+            <name>languagetool-os-release</name>
             <url>https://repo.languagetool.org/artifactory/languagetool-os-release/</url>
         </repository>
         <snapshotRepository>
