try to make this build

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,13 @@
         </snapshotRepository>
     </distributionManagement>
 
+    <repositories>
+        <repository>
+            <id>repo.languagetool.org</id>
+            <url>https://repo.languagetool.org/artifactory/languagetool-os-snapshot/</url>
+        </repository>
+    </repositories>
+
     <properties>
         <revision>6.3-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
