[nl] add missing dependency

--- a/languagetool-language-modules/nl/pom.xml
+++ b/languagetool-language-modules/nl/pom.xml
@@ -44,6 +44,10 @@
             <artifactId>languagetool-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.languagetool</groupId>
+            <artifactId>dutch-pos-dict</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
