--- a/pom.xml
+++ b/pom.xml
@@ -212,7 +212,7 @@
         <org.softcatala.catalan-pos-dict.version>2.22</org.softcatala.catalan-pos-dict.version>
         <org.tukaani.version>1.8</org.tukaani.version>
 
-        <frensh-pos-dict.version>0.5</frensh-pos-dict.version>
+        <french-pos-dict.version>0.5</french-pos-dict.version>
         <guava.version>32.1.1-jre</guava.version>
         <jackson.version>2.14.2</jackson.version>
         <languagetool-ga-dicts.version>0.02</languagetool-ga-dicts.version>
@@ -714,7 +714,7 @@
             <dependency>
                 <groupId>org.languagetool</groupId>
                 <artifactId>french-pos-dict</artifactId>
-                <version>${frensh-pos-dict.version}</version>
+                <version>${french-pos-dict.version}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.carrot2</groupId>
