--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,7 @@
         <commons-validator>1.7</commons-validator>
 
         <de.danielnaber.german-pos-dict.version>1.2.4</de.danielnaber.german-pos-dict.version>
-        <de.danielnaber.jwordsplitter.version>4.6</de.danielnaber.jwordsplitter.version>
+        <de.danielnaber.jwordsplitter.version>4.7-SNAPSHOT</de.danielnaber.jwordsplitter.version>
 
         <edu.washington.cs.knowitall.openregex.version>1.1.1</edu.washington.cs.knowitall.openregex.version>
 
