--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <module>languagetool-http-client</module>
         <module>languagetool-tools</module>
         <module>languagetool-dev</module>
+        <module>languagetool-language-modules/language-java8compat</module>
         <!--        <module>languagetool-rpm-package</module>-->
         <!-- don't add languagetool-client-example here, it's built manually only -->
     </modules>
