--- a/languagetool-language-modules/fr/pom.xml
+++ b/languagetool-language-modules/fr/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>6.3</version>
+        <version>${revision}</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
