--- a/pom.xml
+++ b/pom.xml
@@ -204,7 +204,7 @@
         <org.glassfish.jaxb.jaxb-runtime.version>2.3.0</org.glassfish.jaxb.jaxb-runtime.version>
         <org.ioperm.morphology-el.version>1.0.0</org.ioperm.morphology-el.version>
         <org.jetbrains.annotations.version>20.1.0</org.jetbrains.annotations.version>
-        <org.jetbrains.intellij.deps.trove4j.version>1.0.20200330</org.jetbrains.intellij.deps.trove4j.version>
+        <it.unimi.dsi.fastutil.core.version>8.5.12</it.unimi.dsi.fastutil.core.version>
         <org.json.version>20231013</org.json.version>
         <org.mybatis.version>3.5.9</org.mybatis.version>
         <org.openoffice.version>4.1.2</org.openoffice.version>
@@ -702,9 +702,9 @@
                 <version>${org.jetbrains.annotations.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.jetbrains.intellij.deps</groupId>
-                <artifactId>trove4j</artifactId>
-                <version>${org.jetbrains.intellij.deps.trove4j.version}</version>
+                <groupId>it.unimi.dsi</groupId>
+                <artifactId>fastutil-core</artifactId>
+                <version>${it.unimi.dsi.fastutil.core.version}</version>
             </dependency>
             <dependency>
                 <!-- The package `JSON-java` before 20180130 is vulnerable to Denial of service. -->
