[LO extension] changes for v6.3.1

--- a/languagetool-office-extension/pom.xml
+++ b/languagetool-office-extension/pom.xml
@@ -127,7 +127,7 @@
                     <descriptors>
                         <descriptor>src/main/assembly/oxt.xml</descriptor>
                     </descriptors>
-                    <finalName>LanguageTool-${project.version}</finalName>
+                    <finalName>LanguageTool-${project.version}.1</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
