[be] Update Belarusian spell dictionary

--- a/languagetool-language-modules/be/pom.xml
+++ b/languagetool-language-modules/be/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>languagetool-core</artifactId>
         </dependency>
         <dependency>
+            <!-- Hunspell dictionary for Belarusian language -->
+            <groupId>io.github.belarus</groupId>
+            <artifactId>linguistics.grammardb.spell.languagetool</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
