--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,7 @@
         <spanish-pos-dict.version>2.1</spanish-pos-dict.version>
         <portuguese-pos-dict.version>0.9</portuguese-pos-dict.version>
         <dutch-pos-dict.version>0.1</dutch-pos-dict.version>
+        <belarusian-pos-dict.version>1.0.2</belarusian-pos-dict.version>
         <tech.units.indriya.version>1.3</tech.units.indriya.version>
         <ecs-logging-java.version>1.3.2</ecs-logging-java.version>
 
@@ -967,6 +968,11 @@
                         <artifactId>morfologik-stemming</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>io.github.belarus</groupId>
+                <artifactId>linguistics.grammardb.spell.languagetool</artifactId>
+                <version>${belarusian-pos-dict.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mariadb.jdbc</groupId>
