[pt] Update PT language pom.xml

--- a/languagetool-language-modules/pt/pom.xml
+++ b/languagetool-language-modules/pt/pom.xml
@@ -25,25 +25,19 @@
 
     <developers>
         <developer>
-            <name>Tiago F. Santos</name>
-            <roles>
-                <role>Maintainer</role>
-            </roles>
-        </developer>
-        <developer>
-            <name>Marco A.G. Pinto</name>
-            <roles>
-                <role>Maintainer</role>
-            </roles>
-        </developer>
-        <developer>
             <name>Daniel Naber</name>
             <roles>
                 <role>Maintainer</role>
             </roles>
         </developer>
         <developer>
-            <name>Marcin Miłkowski</name>
+            <name>Pedro Goulart</name>
+            <roles>
+                <role>Maintainer</role>
+            </roles>
+        </developer>
+        <developer>
+            <name>Marco A.G. Pinto</name>
             <roles>
                 <role>Maintainer</role>
             </roles>
