[pt] [WIP] Add EN spellchecking to PT speller rule

--- a/languagetool-language-modules/pt/pom.xml
+++ b/languagetool-language-modules/pt/pom.xml
@@ -65,6 +65,10 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.languagetool</groupId>
+            <artifactId>language-en</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
