[crh] initial support for Crimean Tatar

--- a/languagetool-language-modules/all/pom.xml
+++ b/languagetool-language-modules/all/pom.xml
@@ -165,6 +165,10 @@
             <artifactId>language-zh</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.languagetool</groupId>
+            <artifactId>language-crh</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
