--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
         <module>languagetool-language-modules/ta</module>
         <module>languagetool-language-modules/tl</module>
         <module>languagetool-language-modules/uk</module>
+        <module>languagetool-language-modules/crh</module>
         <module>languagetool-language-modules/de-DE-x-simple-language</module>
         <module>languagetool-language-modules/ga</module>
         <module>languagetool-language-modules/all</module>
@@ -220,6 +221,7 @@
         <lucene.version>5.5.5</lucene.version>
         <morfologik.version>2.1.9</morfologik.version>
         <morfologik-ukrainian-lt.version>6.3.1</morfologik-ukrainian-lt.version>
+        <morfologik-crh-lt.version>1.0.0-SNAPSHOT</morfologik-crh-lt.version>
         <optimaize.languagedetector.language-detector.version>0.6</optimaize.languagedetector.language-detector.version>
         <!-- see https://github.com/languagetool-org/languagetool/issues/4088 before you upgrade this -->
         <spanish-pos-dict.version>2.1</spanish-pos-dict.version>
@@ -890,6 +892,11 @@
             </dependency>
             <dependency>
                 <groupId>org.languagetool</groupId>
+                <artifactId>language-crh</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.languagetool</groupId>
                 <artifactId>languagetool-commandline</artifactId>
                 <version>${revision}</version>
             </dependency>
@@ -1089,6 +1096,11 @@
                 <groupId>ua.net.nlp</groupId>
                 <artifactId>morfologik-ukrainian-lt</artifactId>
                 <version>${morfologik-ukrainian-lt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.qirimca.nlp</groupId>
+                <artifactId>morfologik-crh-lt</artifactId>
+                <version>${morfologik-crh-lt.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.openoffice</groupId>
