--- a/pom.xml
+++ b/pom.xml
@@ -221,7 +221,7 @@
         <lucene.version>5.5.5</lucene.version>
         <morfologik.version>2.1.9</morfologik.version>
         <morfologik-ukrainian-lt.version>6.3.1</morfologik-ukrainian-lt.version>
-        <morfologik-crh-lt.version>1.0.0-SNAPSHOT</morfologik-crh-lt.version>
+        <morfologik-crh-lt.version>1.0.0</morfologik-crh-lt.version>
         <optimaize.languagedetector.language-detector.version>0.6</optimaize.languagedetector.language-detector.version>
         <!-- see https://github.com/languagetool-org/languagetool/issues/4088 before you upgrade this -->
         <spanish-pos-dict.version>2.1</spanish-pos-dict.version>
