[en] move dictionaries to a external dependency

--- a/languagetool-language-modules/en/pom.xml
+++ b/languagetool-language-modules/en/pom.xml
@@ -57,6 +57,10 @@
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
+            <artifactId>english-pos-dict</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
         </dependency>
         <dependency>
