[nl] accept EN words in NL text

--- a/languagetool-language-modules/nl/pom.xml
+++ b/languagetool-language-modules/nl/pom.xml
@@ -59,6 +59,11 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <!-- dependency to detect EN words in NL sentences -->
+            <groupId>org.languagetool</groupId>
+            <artifactId>english-pos-dict</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
