[nl] accept specific EN words in NL

--- a/languagetool-language-modules/nl/pom.xml
+++ b/languagetool-language-modules/nl/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>dutch-pos-dict</artifactId>
         </dependency>
         <dependency>
+            <!-- dependency to accept EN words in NL sentences -->
+            <groupId>org.languagetool</groupId>
+            <artifactId>english-pos-dict</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
