[nl] accept specific EN words in PT

--- a/languagetool-language-modules/pt/pom.xml
+++ b/languagetool-language-modules/pt/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>portuguese-pos-dict</artifactId>
         </dependency>
         <dependency>
+            <!-- dependency to accept EN words in PT sentences -->
+            <groupId>org.languagetool</groupId>
+            <artifactId>english-pos-dict</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
