[nl] accept specific EN words in ES

--- a/languagetool-language-modules/es/pom.xml
+++ b/languagetool-language-modules/es/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>spanish-pos-dict</artifactId>
         </dependency>
         <dependency>
+            <!-- dependency to accept EN words in ES sentences -->
+            <groupId>org.languagetool</groupId>
+            <artifactId>english-pos-dict</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
