[nl] accept specific EN words in DE

--- a/languagetool-language-modules/de/pom.xml
+++ b/languagetool-language-modules/de/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>languagetool-core</artifactId>
         </dependency>
         <dependency>
+            <!-- dependency to accept EN words in DE sentences -->
+            <groupId>org.languagetool</groupId>
+            <artifactId>english-pos-dict</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
