[uk] move Ukrainian dictionary dependency to uk module

--- a/languagetool-language-modules/uk/pom.xml
+++ b/languagetool-language-modules/uk/pom.xml
@@ -50,6 +50,10 @@
         </developer>
     </developers>
 
+    <properties>
+        <morfologik-ukrainian-lt.version>6.4.1</morfologik-ukrainian-lt.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.languagetool</groupId>
@@ -58,6 +62,7 @@
         <dependency>
             <groupId>ua.net.nlp</groupId>
             <artifactId>morfologik-ukrainian-lt</artifactId>
+            <version>${morfologik-ukrainian-lt.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
