[ast] dictionaries in external dependency

--- a/languagetool-language-modules/ast/pom.xml
+++ b/languagetool-language-modules/ast/pom.xml
@@ -55,6 +55,10 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.languagetool</groupId>
+            <artifactId>asturian-pos-dict</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
