Add some new rules to en-GB grammar.xml.

--- a/languagetool-client-example/pom.xml
+++ b/languagetool-client-example/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-all</artifactId>
-            <version>5.9</version>
+            <version>6.5-SNAPSHOT</version>
         </dependency>
         <!--
         <dependency>
