--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         </developer>
     </developers>
     <modules>
+        <module>languagetool-client-example</module>
         <module>languagetool-core</module>
         <module>languagetool-language-modules/en</module>
         <module>languagetool-language-modules/fa</module>
