Protect remote rules from unwanted traffic (#10640)
* Add test for UntrustedReferrer

* Update test to be more like our productive env

* refactor untrustedReferrer to trustedSources and add some tests

* remove sout

* Update test

--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,7 @@
         <hsqldb.version>2.7.1</hsqldb.version>
         <rest-assured.version>5.1.1</rest-assured.version>
         <org.awaitility.version>4.1.1</org.awaitility.version>
+        <okhttp3.version>4.12.0</okhttp3.version>
     </properties>
 
     <dependencyManagement>
@@ -1132,6 +1133,12 @@
                 <artifactId>unoil</artifactId>
                 <version>${org.openoffice.version}</version>
                 <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp3.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>io.rest-assured</groupId>
