feat: Bump Lucene@8.11.3 and lucene-gosen@8.11.0

--- a/languagetool-language-modules/ja/pom.xml
+++ b/languagetool-language-modules/ja/pom.xml
@@ -40,7 +40,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.lucene-gosen</groupId>
+            <groupId>org.omegat.lucene</groupId>
             <artifactId>lucene-gosen</artifactId>
             <classifier>ipadic</classifier>
         </dependency>
