--- a/languagetool-dev/pom.xml
+++ b/languagetool-dev/pom.xml
@@ -59,6 +59,10 @@
             <artifactId>languagetool-wikipedia</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
         </dependency>
