--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,7 @@
         <com.carrotsearch.hppc.version>0.8.2</com.carrotsearch.hppc.version>
         <com.gitlab.dumonts.hunspell.version>2.1.2</com.gitlab.dumonts.hunspell.version>
         <com.github.lucene-gosen.version>6.2.1</com.github.lucene-gosen.version>
+        <org.omegat.lucene.lucene-gosen.version>8.11.0</org.omegat.lucene.lucene-gosen.version>
         <com.hankcs.aho-corasick-double-array-trie.version>1.2.2</com.hankcs.aho-corasick-double-array-trie.version>
         <com.hankcs.hanlp.version>portable-1.8.2</com.hankcs.hanlp.version>
         <com.ibm.icu.version>70.1</com.ibm.icu.version>
@@ -217,7 +218,7 @@
         <jackson.version>2.16.1</jackson.version>
         <languagetool-ga-dicts.version>0.02</languagetool-ga-dicts.version>
         <lombok.version>1.18.30</lombok.version>
-        <lucene.version>5.5.5</lucene.version>
+        <lucene.version>8.11.3</lucene.version>
         <morfologik.version>2.1.9</morfologik.version>
         <optimaize.languagedetector.language-detector.version>0.6</optimaize.languagedetector.language-detector.version>
         <!-- see https://github.com/languagetool-org/languagetool/issues/4088 before you upgrade this -->
@@ -275,9 +276,9 @@
                 <version>${jackson.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.github.lucene-gosen</groupId>
+                <groupId>org.omegat.lucene</groupId>
                 <artifactId>lucene-gosen</artifactId>
-                <version>${com.github.lucene-gosen.version}</version>
+                <version>${org.omegat.lucene.lucene-gosen.version}</version>
                 <classifier>ipadic</classifier>
                 <exclusions>
                     <exclusion>
