--- a/languagetool-language-modules/uk/pom.xml
+++ b/languagetool-language-modules/uk/pom.xml
@@ -51,7 +51,7 @@
     </developers>
 
     <properties>
-        <morfologik-ukrainian-lt.version>6.5.0-SNAPSHOT</morfologik-ukrainian-lt.version>
+        <morfologik-ukrainian-lt.version>6.5.0</morfologik-ukrainian-lt.version>
     </properties>
 
     <dependencies>
