io.lettuce 6.5.0.RC1 (netty)

--- a/languagetool-server/pom.xml
+++ b/languagetool-server/pom.xml
@@ -64,6 +64,7 @@
         <dependency>
             <groupId>io.lettuce</groupId>
             <artifactId>lettuce-core</artifactId>
+            <version>6.5.0.RC1</version>
         </dependency>
         <dependency>
             <!-- monitoring via prometheusMonitoring -->
