--- a/languagetool-server/pom.xml
+++ b/languagetool-server/pom.xml
@@ -67,6 +67,11 @@
             <version>6.5.0.RC1</version>
         </dependency>
         <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-core-http-netty</artifactId>
+            <version>1.15.5</version>
+        </dependency>
+        <dependency>
             <!-- monitoring via prometheusMonitoring -->
             <!-- client and guava bindings in languagetool-core -->
             <!-- Hotspot JVM metrics-->
